src/main/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-spring-boot-application
  labels:
    app: simple-spring-boot-application
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: simple-spring-boot-application
  type: NodePort
